# SateenNoita

./: .gitignore  CMakeLists.txt  README.md
EngineCore/: CMakeLists.txt
EngineCore/includes/EngineCore/: application.h  debug_log.h  display_manager.h  events.h  events_data.h  game_interface.h  game_window_info.h  inventory.h  map_generator.h  mobs_move_system.h  player_move_system.h  scene.h  shader_program.h  stats_system.h  system_actions.h  text_display_system.h  texture_manager.h  tiles_info.h  tiles_map.h  window.h
EngineCore/includes/Mathematics/: a_star.h  noises.h  ortho_projection.h  perlin_noise.h  vector.h
EngineCore/src/EngineCore/: application.c  display_manager.c  events.c  game_interface.c  inventory.c  map_generator.c  mobs_move_system.c  player_move_system.c  scene.c  shader_program.c  stats_system.c  system_actions.c  text_display_system.c  texture_manager.c  tiles_map.c  window.c
EngineCore/src/Mathematics/: a_star.c  noises.c  ortho_projection.c  perlin_noise.c  vector.c
GameCore/: CMakeLists.txt
GameCore/src/: main.c
res/: game.glslf  game.glslv  interface.glslf  interface.glslv  text.glslf  text.glslv
